--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.6.9",
     "express": "^4.18.1",
     "express-openid-connect": "^2.7.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2",
+    "side-channel": "^1.0.4"
   }
 }
